fix: springboot bench